Typos and stuff

--- a/README.html
+++ b/README.html
@@ -567,7 +567,7 @@ Il est à supposer que cet écart à la norme est du aux conditions general d&#3
 
 <ul>
 <li>Un moteur Nema 14 200 pas/rev</li>
-<li><p>Des AO Texas instrument </p>
+<li><p>Des AO Texas instrument TL2374</p>
 
 <p>Cet AO à l&#39;interet d&#39;avoir une unique alimentation 5v, ce qui permet à notre montage de fonctionner sur une alimentation classique</p></li>
 <li><p>Un driver de moteur pas-a-pas A4988</p></li>
@@ -575,7 +575,7 @@ Il est à supposer que cet écart à la norme est du aux conditions general d&#3
 
 <h3 id="toc_9">Schema</h3>
 
-<p><img src="Sche%CC%81ma%20CSE%20final.pdf" alt=""></p>
+<p><img src="Sche%CC%81ma%20CSE%20final.png" alt=""></p>
 
 <h2 id="toc_10">Realisation</h2>
 
@@ -583,8 +583,9 @@ Il est à supposer que cet écart à la norme est du aux conditions general d&#3
 
 <p><img src="auda.png" alt=""></p>
 
-<p>La vidéo suivante montre le système en fonctionnement. 
-<embed type="video/quicktime" src="CSE video.m4v" width="420" height="240"></p>
+<p>La vidéo suivante montre le système en fonctionnement. </p>
+
+<p><embed type="video/mp4" src="CSE video.m4v" width="420" height="240"></p>
 
 <p>Malheureusement, les 3 drivers dont nous disposions ont brulé en raison d&#39;une alimentation fautive (ou peut d&#39;etre d&#39;une erreur à regler le potentiomètre de limitation de courant, qui sait).</p>
 
