--- a/README.html
+++ b/README.html
@@ -575,7 +575,7 @@ Il est à supposer que cet écart à la norme est du aux conditions general d&#3
 
 <h3 id="toc_9">Schema</h3>
 
-<p><img src="Sche%CC%81ma%20CSE%20final.png" alt=""></p>
+<p><img src="Schema%20CSE%20final.png" alt=""></p>
 
 <h2 id="toc_10">Realisation</h2>
 
@@ -583,7 +583,7 @@ Il est à supposer que cet écart à la norme est du aux conditions general d&#3
 
 <p><img src="auda.png" alt=""></p>
 
-<p>La vidéo suivante montre le système en fonctionnement. </p>
+<p>La vidéo suivante montre le système en fonctionnement: (voir version HTML) </p>
 
 <p><embed type="video/mp4" src="CSE video.m4v" width="420" height="240"></p>
 
